fix issue with vertical scrollbar on chrome keep disappearing

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body {
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background: linear-gradient(to left, #034f84, #deeaee); */
   background: #ffffff;
   color: #4b4b4b;
+  overflow-y: scroll; /* prevent issue in chrome where vertical scrollbar keep disappear/reappear */
 }
 
 code {
